* General

All user visible changes to organice will be documented in this file.

When there are updates to the changelog, you will be notified and see a 'gift' icon appear on the top right corner.

* [2020-09-20 Sun]
** Added

   - Recognize US and Swiss phone numbers and make them clickable
   - Next to 'canonical' phone numbers like +498025123456789, also recognize:
     - US phone numbers:
       - 123-456-7890
       - (123) 456-7890
       - 123 456 7890
       - 123.456.7890
       - +91 (123) 456-7890
     - Swiss phone numbers:
      - 0783268674
      - 041783268675
      - 0041783268674
      - +41783268676
      - +41783268677

* [2020-09-07 Mon]
** Added
   - Added the capability to chose the start screen when installing organice to the homescreen.
     - More information on how to install organice like this, see https://organice.200ok.ch/documentation.html#installation
* [2020-09-05 Sat]

** Fixed
  - Search and Todo List modals could be moved off screen on iOS since [2020-08-30 Sun]. The fix is to disable =autoFocus= on iOS. The rationale for that documented here: https://github.com/200ok-ch/organice/pull/462

* [2020-08-30 Sun]

** Added
   - Add note to header (=M-x org-add-note=)
     - This adds a button for taking notes to tasks (org-add-note). They will be prepended to the header contents after :PROPERTIES: and before the :LOGBOOK:
   - Auto-focus filter input fields (search and task-list)

* [2020-08-29 Sat]
** Fixed
   - If a user folds a header, all its subheaders should collapse as well, so that when the user reopens it, they stay closed.
     - The previous behavior is buggy in a way that it keeps the subheaders open as they were, restoring their openness when the header is unfolded.
     - The previous behavior is useful, though. So this change introduces a user setting to toggle the behaviour.
   - Thank you [[https://github.com/necto][necto]] for your [[https://github.com/200ok-ch/organice/pull/440][PR]] 🙏

* [2020-08-25 Tue]
** Fixed