@@ -8,7 +8,7 @@ When there are updates to the changelog, you will be notified and see a 'gift' i
 ** Added
 
    - Recognize US and Swiss phone numbers and make them clickable
-   - Next to 'canonical' phone numbers like +498025123456789, also recognize:
+   - Next to 'canonical' phone numbers like +49123456789, also recognize:
      - US phone numbers:
        - 123-456-7890
        - (123) 456-7890
@@ -17,6 +17,7 @@ When there are updates to the changelog, you will be notified and see a 'gift' i
        - +91 (123) 456-7890
      - Swiss phone numbers:
       - 0783268674
+      - 078 326 86 74
       - 041783268675
       - 0041783268674
       - +41783268676
